--- a/index.html
+++ b/index.html
@@ -21,10 +21,19 @@
         <header class="header">
             <div class="_container">
                 <div class="header__block">
-                    <div class="header__burger">
-                        <span></span>
-                    </div>
+
+
                     <div class="header__left">COFFIN DANCE</div>
+                    <div class="header__burger-block">
+                        <ul>
+                            <li class=" header__main-point active">Home</li>
+                            <li class=" header__main-point">About</li>
+                            <li class=" header__main-point">How to buy</li>
+                            <li class=" header__main-point">Tokenomic</li>
+                            <li class=" header__main-point">Roadmap</li>
+                            <li class=" header__main-point">Team</li>
+                        </ul>
+                    </div>
                     <div class="header__main">
                         <ul>
                             <li class=" header__main-point active">Home</li>
@@ -34,6 +43,9 @@
                             <li class=" header__main-point">Roadmap</li>
                             <li class=" header__main-point">Team</li>
                         </ul>
+                    </div>
+                    <div class="header__burger">
+                        <span></span>
                     </div>
                     <div class="header__right">
                         <button>BUY NOW</button>
@@ -48,31 +60,235 @@
                 <div class="hello__backround">
                     <img src="./img/main/first_back.png" alt="">
                 </div>
-                <div class="_container">
-                    <div class="hello__main">
-                        <div class="hello__subtitle">the meme coin the world didn't see coming. From the heart of the
-                            most iconic meme,</div>
-                        <div class="hello__title">Coffin Dance, we bring you a token that's about to lead the
-                            cryptoverse to a new rhythm.</div>
-                        <div class="hello__social">
-                            <div class="hello__social-point"><img src="./img/social/tg.png" alt=""></div>
-                            <div class="hello__social-point"><img src="./img/social/twitter.png" alt=""></div>
-                            <div class="hello__social-point"><img src="./img/social/ds.png" alt=""></div>
-                            <div class="hello__social_buy">
-                                <button>BUY NOW</button>
+                <section>
+                    <div class="_container">
+                        <div class="hello__main">
+                            <div class="hello__subtitle">the meme coin the world didn't see coming. From the heart of
+                                the
+                                most iconic meme,</div>
+                            <div class="hello__title">Coffin Dance, we bring you a token that's about to lead the
+                                cryptoverse to a new rhythm.</div>
+                            <div class="hello__social">
+                                <div class="hello__social-point"><img src="./img/social/tg.png" alt=""></div>
+                                <div class="hello__social-point"><img src="./img/social/twitter.png" alt=""></div>
+                                <div class="hello__social-point"><img src="./img/social/ds.png" alt=""></div>
+                                <div class="hello__social_buy">
+                                    <button>BUY NOW</button>
+                                </div>
+                                <div class="hello__social-point"><img src="./img/social/icon 4.png" alt=""></div>
+                                <div class="hello__social-point"><img src="./img/social/icon 5.png" alt=""></div>
+                                <div class="hello__social-point"><img src="./img/social/icon 6.png" alt=""></div>
                             </div>
-                            <div class="hello__social-point"><img src="./img/social/icon 4.png" alt=""></div>
-                            <div class="hello__social-point"><img src="./img/social/icon 5.png" alt=""></div>
-                            <div class="hello__social-point"><img src="./img/social/icon 6.png" alt=""></div>
                         </div>
                     </div>
-                </div>
+                </section>
+                <section class="about">
+                    <img class="about__backround" src="./img/main/about__backround.png" alt="">
+                    <img class="about__backround-peaple" src="./img/main/about__people.png" alt="">
+                    <div class="_container">
+                        <div class="about__block">
+                            <div class="about__left">
+                                <h2>About</h2>
+                                <p>The Coffin Dancers have grown weary of the endless game of hot potato played with the
+                                    countless derivative meme coins.
+                                    The dogs have had their moment in the spotlight. Now, it's time for the most iconic
+                                    meme of the COVID era to step onto
+                                    the stage and dance.
+                                </p>
+                                <p>The Coffin Dance, with its official video boasting over 415 million views, has
+                                    brought joy and laughter to people
+                                    worldwide during challenging times. Today, it stands ready to do the same in the
+                                    world of meme coins.</p>
+                                <p>$COFFIN is here to reinvigorate the meme coin scene. Stealthily launched with no
+                                    presale, zero taxes, LP burnt to the
+                                    ground, and contract relinquished, $COFFIN is a token for the people, forever.</p>
+                            </div>
+                            <div class="about__right">
+                                <p>Born from the minds behind the viral Coffin Dance video, $COFFIN is powered by the
+                                    unyielding energy of meme magic. Let
+                                    $COFFIN guide you through the cryptoverse, one rhythm at a time.</p>
+                                <ul>
+                                    <li><span>1.2+ billion</span> views on Youtube (original video+parodies)
+                                    </li>
+                                    <li><span>600+ million</span> views on TikTok</li>
+                                    <li><span>200+ million</span> posts on Instagram</li>
+                                    <li><span>60.000+</span> tweets in 1 Month.</li>
+                                </ul>
+                            </div>
+
+                        </div>
+                        <div class="about__video">
+                            <iframe width="560" height="315"
+                                src="https://www.youtube.com/embed/t0vXnVVoFPA?si=QHcEyn8UwlYmMowc"
+                                title="YouTube video player" frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                allowfullscreen></iframe>
+                        </div>
+
+                    </div>
+                </section>
+                <section class="tokenomics">
+                    <img class="tokenomics__backround" src="./img/main/tokenomics_backround.png" alt="">
+                    <div class="_container">
+                        <div class="tokenomics__block">
+                            <div class="tokenomics__left">
+                                <img src="./img/main/sDanceGraph.png" alt="">
+                            </div>
+                            <div class="tokenomics__right">
+                                <h2>Tokenomics</h2>
+                                <div class="tokenomics__tocken">Token supply:</div>
+                                <div class="tokenomics__sum">7.777.777.777.777</div>
+                                <div class="tokenomics__point">
+                                    <div class="tokenomics__point-title">Taxes:</div>
+                                    <p> Absolutely no levies, and the team has renounced the reins of the contract. Time
+                                        to dance freely with $COFFIN!</p>
+                                </div>
+                                <div class="tokenomics__point">
+                                    <div class="tokenomics__point-title">Liquid Supply: </div>
+                                    <p>A smooth 7% of supply set aside for CEXs, a fiery 93% added to LP or burnt at the
+                                        launch! LP Tokens?
+                                        Consider them scorched! Let the rhythm of $COFFIN guide you!</p>
+                                </div>
+                                <div class="tokenomics__point-title">Every wallet dances under the spotlight with our
+                                    ENS name for effortless trackin:</div>
+                                <div class="tokenomics__list">
+                                    <ul>
+                                        <li>Main : coffindance.eth</li>
+                                        <li>DEX : coffindancedex.eth</li>
+                                        <li>CEX : coffindancecex.eth</li>
+                                        <li>Circulating Supply : coffindancepool.eth</li>
+                                        <li>BurnWallet : coffindanceburn.eth</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </section>
+                <section class="roadmap">
+                    <img src="./img/main/roadmap__back.png" class="roadmap__back"></img>
+                    <div class="_container">
+                        <div class="roadmap__block">
+                            <h2>Roadmap</h2>
+                            <div class="roadmap__subtitle">In the realm of dance, where energy reigns supreme, the
+                                impossible transforms into the achievable, fueling the journey
+                                with boundless possibilities.</div>
+                            <div class="roadmap__phases">
+                                <div class="roadmap__phase1 roadmap__phase">
+                                    <div class="roadmap__phase-title">Phase 1</div>
+                                    <div class="roadmap__phase-main">
+                                        <ul>
+                                            <li>DEX Debut</li>
+                                            <li>$COFFIN debuts on</li>
+                                            <li>CoinGecko/Coinmarketcap</li>
+                                            <li>DEX Debut 1,000+ Rhythm Keepers</li>
+                                            <li>Set Twitter ablaze with $COFFIN, powered by
+                                                unstoppable meme magic.</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="roadmap__phase2 roadmap__phase">
+                                    <div class="roadmap__phase-title">Phase 2</div>
+                                    <div class="roadmap__phase-main">
+                                        <div class="roadmap__phase-img"><img src="./img/main/roadmap2.png" alt=""></div>
+                                        <ul>
+                                            <li>Marketing&KOLs crusade</li>
+                                            <li>Unveiling the 'Dance Citadel', an exclusive Discord haven for</li>
+                                            <li>$COFFIN holders</li>
+                                            <li>$COFFIN grand entrance on CEX</li>
+                                            <li>10,000+ rhythm keepers</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="roadmap__phase3 roadmap__phase">
+                                    <div class="roadmap__phase-title">Phase 3</div>
+                                    <div class="roadmap__phase-main">
+                                        <div class="roadmap__phase-img3"><img src="./img/main/roadmap3.png" alt="">
+                                        </div>
+                                        <ul>
+                                            <li>Coffin Dance Merchandise</li>
+                                            <li>Coffin Dance Energy Drink</li>
+                                            <li>New version of the Coffin Dance</li>
+                                            <li>Tier 1 Exchange Listings</li>
+                                            <li>100,000+ rhythm keepers</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section class="team">
+                    <img class="team__back" src="./img/main/team__back.png" alt="">
+                    <div class="_container">
+                        <div class="team__block">
+                            <h2>TEAM</h2>
+                            <div class="team__cards">
+                                <div class="team__cards-row">
+                                    <div class="team__card">
+                                        <img src="./img/team/team-1.png" alt="">
+                                        <div class="team__card-title">Benjamin Aidoo</div>
+                                        <div class="team__card-info">Nana Otafrija
+                                            Pallbearing & waiting Services CEO</div>
+                                    </div>
+                                    <div class="team__card"><img src="./img/team/team-2.png" alt="">
+                                        <div class="team__card-title">John Telewa</div>
+                                        <div class="team__card-info">Benjamin’s personal manager & booking agent</div>
+                                    </div>
+                                    <div class="team__card"><img src="./img/team/team-3.png" alt="">
+                                        <div class="team__card-title">Evgene Zen</div>
+                                        <div class="team__card-info">Project Manager
+                                            & Advisor</div>
+                                    </div>
+                                </div>
+                                <div class="team__cards-row">
+                                    <div class="team__card"><img src="./img/team/team-4.png" alt="">
+                                        <div class="team__card-title">Daria Brahynska</div>
+                                        <div class="team__card-info">WEB3 marketing specialist</div>
+                                    </div>
+                                    <div class="team__card"><img src="./img/team/team-5.png" alt="">
+                                        <div class="team__card-title">Matthew Ordrick</div>
+                                        <div class="team__card-info">Creator of Coffin
+                                            Dance Meme & Founder of DigiNeko
+                                            +marketing team</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section class="token">
+                    <div class="token__back">
+                        <img src="./img/main/footer_back.png" alt="">
+                    </div>
+                    <div class="_container">
+                        <div class="token__block">
+                            <div class="token__block-text">
+                                $COFFIN token has no value. Non of the Information above is financial advice. Do not
+                                expect
+                                financial return or profits
+                                when purchasing this token. The only usecase of $COFFIN token is to spread awareness for
+                                old
+                                school memes.
+                            </div>
+
+                        </div>
+                    </div>
+                </section>
             </div>
 
         </main>
         <footer class="footer">
-            <div class="_container">
 
+            <div class="_container">
+                <div class="footer__block">
+                    <div class="footer__social">
+                        <div class="footer__social-point"><img src="./img/social/tg.png" alt=""></div>
+                        <div class="footer__social-point"><img src="./img/social/twitter.png" alt=""></div>
+                        <div class="footer__social-point"><img src="./img/social/ds.png" alt=""></div>
+                    </div>
+                    <div class="footer__txt">@Copyright $DANCE 2023, $DANCE</div>
+                </div>
 
             </div>
 
