--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                         </div>
                         <div class="about__video">
                             <iframe width="560" height="315"
-                                src="https://www.youtube.com/embed/t0vXnVVoFPA?si=QHcEyn8UwlYmMowc"
+                                src="https://www.youtube.com/embed/wTkLLQjgoEU?si=5qrmINQL-uopBApu"
                                 title="YouTube video player" frameborder="0"
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                                 allowfullscreen></iframe>
