--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
                         </div>
                     </div>
                 </section>
+                <div class="circle__decor"></div>
                 <section class="about">
                     <img class="about__backround" src="./img/main/about__backround.png" alt="">
                     <img class="about__backround-peaple" src="./img/main/about__people.png" alt="">
@@ -127,6 +128,7 @@
 
                     </div>
                 </section>
+                <div class="circle__decor"></div>
                 <section class="tokenomics">
                     <img class="tokenomics__backround" src="./img/main/tokenomics_backround.png" alt="">
                     <div class="_container">
@@ -165,6 +167,7 @@
 
                     </div>
                 </section>
+                <div class="circle__decor"></div>
                 <section class="roadmap">
                     <img src="./img/main/roadmap__back.png" class="roadmap__back"></img>
                     <div class="_container">
@@ -218,6 +221,7 @@
                         </div>
                     </div>
                 </section>
+                <div class="circle__decor"></div>
                 <section class="team">
                     <img class="team__back" src="./img/main/team__back.png" alt="">
                     <div class="_container">
@@ -257,6 +261,7 @@
                         </div>
                     </div>
                 </section>
+
                 <section class="token">
                     <div class="token__back">
                         <img src="./img/main/footer_back.png" alt="">
